Cambios finales antes de la entrega 1

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,6 +189,10 @@ a.custom-card:hover {
   color: orange;
 }
 
+#loginBtn {
+  color: #33da65;
+}
+
 #boton-enviar {
   background-color: grey;
   margin-left: 46%;
