Entregas 2 y 3 terminadas (espero nunca volver a ver la entrega 2)

--- a/css/styles.css
+++ b/css/styles.css
@@ -190,11 +190,16 @@ a.custom-card:hover {
 }
 
 #loginBtn {
-  color: #33da65;
+  margin-top: 2%;
+}
+
+#logoutBtn {
+  margin-top: 4%;
 }
 
 #boton-enviar {
   background-color: grey;
   margin-left: 46%;
   margin-right: 46%;
+  border: 2px;
 }
